# supa-rs

./: .env.example  .env.supabase.test.example  .env.test.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: migrating-from-supabase.md  observability.md
docs/plans/: 2026-02-26-suparust-design.md  2026-02-26-suparust-phase-1-plan.md  2026-03-01-cli-design.md  2026-03-01-cli-implementation.md  2026-03-01-seaquery-refactor.md  2026-03-02-cli-profile-system-design.md  2026-03-02-cli-profile-system-impl.md  2026-03-02-env-compat-design.md  2026-03-02-env-compat-impl.md  2026-03-02-env-test-generator-design.md  2026-03-02-env-test-generator.md  2026-03-02-pid-file-isolation-design.md  2026-03-02-pid-file-isolation.md  2026-03-02-structured-logging-design.md  2026-03-02-structured-logging.md  2026-03-02-supabase-compat-test.md
migrations/: 20260226000001_roles.sql  20260226000002_auth_schema.sql  20260226000003_storage_schema.sql  20260226000004_public_views.sql  20260226000005_default_rls_policies.sql  20260226000006_storage_rls_policies.sql  20260226000007_service_role_grants.sql  20260226000009_relax_rls_policies.sql
scripts/: gen-env-test.mjs  start-test-server.sh
src/: config.rs  main.rs  tracing.rs
src/api/: auth.rs  mod.rs  rest.rs  storage.rs
src/cli/: logs.rs  mod.rs  start.rs  status.rs  stop.rs
src/db/: embed.rs  execute.rs  mod.rs  pool.rs
src/parser/: filter.rs  mod.rs  order.rs  select.rs
test-client/: .env.supabase.test.example  .env.test.example  globalSetup.js  package-lock.json  package.json  suparust.test.js  vitest.config.js
(+4 files in other folders)
